--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,8 +7,7 @@
       android:versionCode="1"
       android:versionName="1.0">
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name" >
-    </application>
-    <uses-sdk android:minSdkVersion="7" />
+    <application/>
+    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="14"/>
 
 </manifest>
